# cinder-puzzle

./: .gitmodules  CMakeLists.txt  readme.md
domains/: pixels.lp  shapes.lp  test.lp  tiling.lp  tsp.lp
include/: Resources.h
include/puzzle/: ASPSolver.h  Constant.h  CycleEdge.h  Domain.h  Fact.h  Fact1.h  FactN.h  PixelColor.h  PixelsDomain.h  PixelsRenderer.h  Point.h  Predicate.h  Puzzle.h  RawFact.h  Rect.h  Renderer.h  Rule.h  ShapesDomain.h  ShapesRenderer.h  Solver.h  TSPDomain.h  TSPRenderer.h  TilingDomain.h  TilingRenderer.h
include/puzzle_demos/: Colors.h  PuzzleDemoApp.h
src/: ASPSolver.cpp  Colors.cpp  Constant.cpp  Demo.cpp  PixelsDomain.cpp  PixelsRenderer.cpp  Puzzle.cpp  ShapesDomain.cpp  ShapesRenderer.cpp  TSPDomain.cpp  TSPRenderer.cpp  TilingDomain.cpp  TilingRenderer.cpp  pixels_demo.cpp  shapes_demo.cpp  tsp_demo.cpp
src/demos/: PuzzleDemoApp.cpp  pixels_demo.cpp  shapes_demo.cpp  tiling_demo.cpp  tsp_demo.cpp
